--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -131,6 +131,7 @@ aside li {
   opacity: 1;
   pointer-events: auto;
   visibility: visible;
+  z-index:99;
 }
 /* reveal aside */
 .overlay.expanded aside {
@@ -444,6 +445,7 @@ button.reset:hover:not(:has(> *)) {
   align-self: start;
   position: sticky;
   top: 6rem;
+  padding: 0 20px;
 }
 
 .product-price-on-sale {
@@ -583,13 +585,15 @@ button.reset:hover:not(:has(> *)) {
 }
 
 .main-image-container {
-  width: 650px;
-  max-width: 800px;
+  width: 100%;
+  height : auto;
+  max-width: 650;
   margin: 30px auto;
   border-radius: 12px;
   overflow: hidden;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
   background: white;
+  padding : 0 20px;
 }
 
 .main-product-image {
@@ -610,7 +614,7 @@ button.reset:hover:not(:has(> *)) {
   gap: 0.75rem;
   justify-content: center;
   flex-wrap: wrap;
-  padding: 0.5rem;
+  padding: 0.5rem 20px;
 }
 
 .thumbnail-wrapper {
